; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_indeo3.c_fill_64.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_indeo3.c_fill_64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i64, i64)* @fill_64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_64(i32* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  br label %9

9:                                                ; preds = %16, %4
  %10 = load i64, i64* %7, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %9
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @AV_WN64A(i32* %13, i32 %14)
  br label %16

16:                                               ; preds = %12
  %17 = load i64, i64* %8, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 %17
  store i32* %19, i32** %5, align 8
  %20 = load i64, i64* %7, align 8
  %21 = add nsw i64 %20, -1
  store i64 %21, i64* %7, align 8
  br label %9

22:                                               ; preds = %9
  ret void
}

declare dso_local i32 @AV_WN64A(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
